--- a/src/style.css
+++ b/src/style.css
@@ -27,19 +27,33 @@ body, a, span, p, textarea {
   position: absolute;
   top: 0;
   background-color: rgb(var(--ic-c-i7));
-  box-sizing: border-box;
-  box-shadow: 0 0 8px #0008;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  -webkit-box-shadow: 0 0 8px #0008;
+          box-shadow: 0 0 8px #0008;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: row;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
 }
 .top > div {
   display: inline-block;
 }
 .top div.c2 {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
   display: inline-flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   height: 100%;
-  justify-content: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   width: auto;
   margin-right: 20px;
   cursor: pointer;
@@ -63,15 +77,21 @@ body, a, span, p, textarea {
 }
 .Entry {
   width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   height: auto;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 .Entry > div {
   width: 80%;
   display: block;
   height: 54px;
-  box-shadow: 0 2px 5px #0004;
+  -webkit-box-shadow: 0 2px 5px #0004;
+          box-shadow: 0 2px 5px #0004;
   border-radius: 6px;
   margin: 6px auto;
   border: 1px solid #0001;
@@ -94,6 +114,7 @@ body, a, span, p, textarea {
   font-size: 16px;
   font-weight: 600;
   cursor: pointer;
+  height: 16px;
 }
 .Entry > div span.c2 {
   font-size: 14px;
@@ -105,7 +126,9 @@ body, a, span, p, textarea {
   font-size: 12px;
 }
 .menu, .menu * {
-  transition-duration: .3s;
+  -webkit-transition-duration: .3s;
+       -o-transition-duration: .3s;
+          transition-duration: .3s;
 }
 .menu {
   display: none;
@@ -142,17 +165,24 @@ body, a, span, p, textarea {
 }
 .Editor {
   padding: 6px;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 .Editor > * {
   display: block;
   width: 100%;
   padding: 4px 0px;
   height: 26px;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 .Editor label {
   display: block;
@@ -169,6 +199,8 @@ body, a, span, p, textarea {
   border-bottom: 2px solid rgb(var(--ic-c-i3));
 }
 .Editor .c2 {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   height: 32px;
 }
@@ -201,7 +233,7 @@ body, a, span, p, textarea {
 .Editor textarea:focus {
   border: 2px solid rgb(var(--ic-c-i3));
 }
-.Editor button{
+.Editor button {
   border: 0;
   color: rgb(var(--ic-c-i7));
   font-weight: 500;
@@ -209,15 +241,17 @@ body, a, span, p, textarea {
   padding: 6px 12px;
   margin: 4px;
   border-radius: 4px;
-  transition-duration: .3s;
+  -webkit-transition-duration: .3s;
+       -o-transition-duration: .3s;
+          transition-duration: .3s;
   float: right;
 }
-.Editor button.s1{
+.Editor button.s1 {
   background-color: #eee;
 }
-.Editor button:hover{
+.Editor button:hover {
   background-color: #ddd;
 }
-.Editor button:active{
+.Editor button:active {
   background-color: #ccc;
 }
