--- a/src/style.css
+++ b/src/style.css
@@ -287,7 +287,7 @@ body, a, span, p, textarea {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  padding: 6px;
+  padding: 14px;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   height: auto;
@@ -311,6 +311,7 @@ body, a, span, p, textarea {
 }
 .dialog > div > div {
   margin-top: auto;
+  margin-bottom: -4px;
 }
 .dialog.show {
   display: -webkit-box;
